--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-email/button": "^0.0.6",
+    "@react-email/container": "^0.0.7",
+    "@react-email/head": "^0.0.4",
+    "@react-email/html": "^0.0.4",
+    "@react-email/img": "^0.0.4",
+    "@react-email/preview": "^0.0.5",
+    "@react-email/render": "^0.0.6",
+    "@react-email/section": "^0.0.8",
+    "@react-email/text": "^0.0.4",
+    "@sendgrid/mail": "^7.7.0",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
