--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY="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"
