--- a/server/.gitignore
+++ b/server/.gitignore
@@ -12,6 +12,7 @@ yarn.lock
 package-lock.json
 
 # .env file (contains sensitive information)
+.env
 .env.local
 .env.development.local
 .env.test.local
