--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "@react-email/render": "^0.0.6",
+    "@react-email/button": "^0.0.6",
+    "@react-email/container": "^0.0.7",
+    "@react-email/head": "^0.0.4",
+    "@react-email/html": "^0.0.4",
+    "@react-email/img": "^0.0.4",
+    "@react-email/preview": "^0.0.5",
+    "@react-email/section": "^0.0.8",
+    "@react-email/text": "^0.0.4",
+    "@sendgrid/mail": "^7.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
