--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-email/section": "^0.0.8",
     "@react-email/text": "^0.0.4",
     "@sendgrid/mail": "^7.7.0",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
