--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,7 +11,7 @@ yarn-error.log*
 yarn.lock
 package-lock.json
 
-# .env file (contains sensitive information)
+.env
 .env.local
 .env.development.local
 .env.test.local
